examples/test/testpolicy11456.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11456
  namespace: namespace481
spec:
  podSelector:
    matchLabels:
      key45: value7
      key22: value17
      key29: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value26
          key8: value22
          key39: value25
